modification du style.css pour la div, les li et la newTask du script.js

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
         <button class="button" type="submit">
             <i class="fa-solid fa-cart-plus"></i>
         </button>
-        <section class="container">
-            <ul class="todo"></ul>
-        </section>
     </form>
+    <div class="container">
+        <ul class="todo"></ul>
+    </div>
+    
     <footer>
     </footer>
     <script src="script.js"></script>
