--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         <ul class="todo"></ul>
     </div>
     
-    <footer>
-    </footer>
+    <footer></footer>
     <script src="script.js"></script>
     
 </body>
