ajout de la transi delete

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         </button>
     </form>
     <div class="container">
-        <ul class="todo"></ul>
+        <ul class="todo">
+        </ul>
     </div>
     
     <footer></footer>
