attempt to add a category selector

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
         <button class="button" type="submit">
             <i class="fa-solid fa-cart-plus"></i>
         </button>
+        <div class="select">
+            <select name="Category" class="filter-category">
+                <option value="all">Toutes les tâches</option>
+                <option value="achieved">Tâche accomplis</option>
+                <option value="standby">Tâche à faire</option>
+            </select>
+        </div>
     </form>
     <div class="container">
         <ul class="todo">
