modif of index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header><h1>Ninjas Turtles Todo List</h1></header>
     <form>
-        <input type="text" class="input">
+        <input type="text" class="input" placeholder="Ecrit ta tache ici">
         <button class="button" type="submit">
             <i class="fa-solid fa-cart-plus"></i>
         </button>
